add: ヴィジュネル暗号

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -981,6 +981,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 多表式暗号\n",
+    "\n",
+    "- 頻度分析に対して脆弱だった単一換字式の改良版\n",
+    "- 暗号機械と相性がよい\n",
+    "- 鍵の存在が重要視され、ワンタイムパッド暗号への発展のきっかけとなった\n",
+    "\n",
+    "### 仕組み\n",
+    "- 異なる変換規則の単一換字式暗号を文字列の各インデックスごとに適用する\n",
+    "- わかりやすいのは、ヴィジュネル表を用いたヴィジュネル暗号である\n",
+    "\n",
+    "**ヴィジュネル表**\n",
+    "\n",
+    " - | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z\n",
+    ":--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--|:--\n",
+    " A | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z\n",
+    " B | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a\n",
+    " C | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b\n",
+    " D | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c\n",
+    " E | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d\n",
+    " F | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e\n",
+    " G | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f\n",
+    " H | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g\n",
+    " I | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h\n",
+    " J | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i\n",
+    " K | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j\n",
+    " L | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k\n",
+    " M | m | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l\n",
+    " N | n | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m\n",
+    " O | o | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n\n",
+    " P | p | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o\n",
+    " Q | q | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p\n",
+    " R | r | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q\n",
+    " S | s | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r\n",
+    " T | t | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s\n",
+    " U | u | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t\n",
+    " V | v | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u\n",
+    " W | w | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v\n",
+    " X | x | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w\n",
+    " Y | y | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x\n",
+    " Z | z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y\n",
+    "\n",
+    "- 上部に平文の文字、側面に鍵となる文字、セルに暗号文の文字が記載されている\n",
+    "- 鍵の文字 A〜Z は、左シフトでずらす数（0〜25）に対応する\n",
+    "    - -> ヴィジュネル暗号は、転置式暗号とシフト暗号を組み合わせた暗号と言える\n",
+    "- 例えば、平文 \"helloworld\" を、鍵 \"STAR\" で暗号化する場合、以下のような処理となる\n",
+    "    1. 平文のサイズに合うように鍵のサイズを拡張する\n",
+    "        - 平文:   \"helloworld\" => 10文字\n",
+    "        - 拡張鍵: \"STARSTARST\" => 10文字に拡張\n",
+    "    2. ヴィジュネル表で、平文と鍵の文字がクロスする部分の文字で置換する\n",
+    "        - 'h' x 'S' => 'z'\n",
+    "        - 'e' x 'T' => 'x'\n",
+    "        - 'l' x 'A' => 'l'\n",
+    "        - 'l' x 'R' => 'c'\n",
+    "        - 'o' x 'S' => 'g'\n",
+    "        - 'w' x 'T' => 'p'\n",
+    "        - 'o' x 'A' => 'o'\n",
+    "        - 'r' x 'R' => 'i'\n",
+    "        - 'l' x 'S' => 'd'\n",
+    "        - 'd' x 'T' => 'w'\n",
+    "    3. 暗号文を得る\n",
+    "        - 暗号文: \"zxlcgpoidw\"\n",
+    "\n",
+    "### ヴィジュネル暗号の鍵の総数\n",
+    "- 1ブロックは鍵kの文字数に相当し、ここではn文字とする\n",
+    "    - アルファベットは26文字のため、ブロック内の1文字をずらすパターンは26通りある\n",
+    "    - 1ブロック内にn文字あるため、鍵の総数は `26^n` となる"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
