add: 多表式暗号の実装

--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[73, 102, 109, 109, 112, 45, 33, 88, 112, 115, 109, 101, 34]\n",
+      "[80, 109, 116, 116, 119, 52, 40, 95, 119, 122, 116, 108, 41]\n",
       "Hello, World!\n"
      ]
     }
@@ -548,9 +548,9 @@
      "data": {
       "text/plain": [
        "3-element Array{Array{Any,1},1}:\n",
-       " ['雨', '降', 'っ', 'て']                  \n",
-       " ['地', '固', 'ま', 'る']                  \n",
-       " ['ぞ', '\\Ua1e62', '\\U9340e', '\\U89450']"
+       " ['雨', '降', 'っ', 'て']            \n",
+       " ['地', '固', 'ま', 'る']            \n",
+       " ['ぞ', '\\U53a79', '\\U6f5e7', '𘞎']"
       ]
      },
      "execution_count": 13,
@@ -595,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "\"雨地ぞ降固\\Ua1e62っま\\U9340eてる\\U89450\""
+       "\"雨地ぞ降固\\U53a79っま\\U6f5e7てる𘞎\""
       ]
      },
      "execution_count": 14,
@@ -802,11 +802,11 @@
      "output_type": "stream",
      "text": [
       "[72, 101, 108, 108, 111, 44, 32, 119, 111, 114, 108, 100, 33, 10, 73, 39, 109, 32, 97, 112, 112, 108, 101, 12496, 12490, 12490, 32, 97, 116, 32, 49, 57, 56, 56, 46, 10, 66, 111, 121, 115, 32, 97, 110, 100, 32, 71, 105, 114, 108, 115, 32, 98, 101, 32, 97, 109, 98, 105, 115, 105, 111, 117, 115, 33, 10]\n",
-      "[72, 108, 32, 114, 33, 39, 97, 108, 12490, 97, 49, 56, 66, 115, 110, 71, 108, 98, 97, 105, 111, 33, 101, 111, 119, 108, 10, 109, 112, 101, 12490, 116, 57, 46, 111, 32, 100, 105, 115, 101, 109, 115, 117, 10, 108, 44, 111, 100, 73, 32, 112, 12496, 32, 32, 56, 10, 121, 97, 32, 114, 32, 32, 98, 105, 115, 434336]\n",
+      "[72, 111, 109, 12490, 56, 32, 108, 98, 10, 101, 114, 32, 12490, 56, 97, 115, 105, 242272, 108, 108, 97, 32, 46, 110, 32, 115, 131680, 108, 100, 112, 97, 10, 100, 98, 105, 186643, 111, 33, 112, 116, 66, 32, 101, 111, 529214, 44, 10, 108, 32, 111, 71, 32, 117, 824108, 32, 73, 101, 49, 121, 105, 97, 115, 296287, 119, 39, 12496, 57, 115, 114, 109, 33, 537954]\n",
       "Hello, world!\n",
       "I'm appleバナナ at 1988.\n",
       "Boys and Girls be ambisious!\n",
-      "񪂠\n"
+      "𻉠𠉠𭤓򁌾󉌬񈕟򃕢\n"
      ]
     }
    ],
@@ -1050,6 +1050,77 @@
     "- 1ブロックは鍵kの文字数に相当し、ここではn文字とする\n",
     "    - アルファベットは26文字のため、ブロック内の1文字をずらすパターンは26通りある\n",
     "    - 1ブロック内にn文字あるため、鍵の総数は `26^n` となる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.Vigenere"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 多表式暗号の実装\n",
+    "module Vigenere\n",
+    "\n",
+    "# 鍵生成:\n",
+    "## 4〜16個の数値を持つ1次元配列を鍵とする（各数値は1〜9の乱数とする）\n",
+    "## -> 簡単なワンタイムパスワード\n",
+    "KeyGen()::Array{Int,1} = rand(1:9, rand(4:16))\n",
+    "\n",
+    "# 暗号化: (平文空間::Array{Int,1}, 鍵::Array{Int,1}) -> 暗号文空間::Array{Int,1}\n",
+    "Enc(signs::Array{Int,1}, key::Array{Int,1})::Array{Int,1} = [\n",
+    "    # 暗号文空間の元 = 平文空間の元 + 鍵の元\n",
+    "    ## 鍵のインデックスは鍵の長さを超えたら先頭に戻るようにする\n",
+    "    signs[i] + key[(i-1) % length(key) + 1] for i = 1:length(signs)\n",
+    "]\n",
+    "\n",
+    "# 復号: (暗号文空間::Array{Int,1}, 鍵::Array{Int,1}) -> 平文空間::Array{Int,1}\n",
+    "Dec(signs::Array{Int,1}, key::Array{Int,1})::Array{Int,1} = [\n",
+    "    # 平文空間の元 = 暗号文空間の元 - 鍵の元\n",
+    "    ## 鍵のインデックスは鍵の長さを超えたら先頭に戻るようにする\n",
+    "    signs[i] - key[(i-1) % length(key) + 1] for i = 1:length(signs)\n",
+    "]\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 9, 5, 4, 4, 3, 3, 9, 3, 7, 6]\n",
+      "[74, 102, 117, 113, 115, 48, 35, 90, 120, 117, 115, 106, 35]\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 動作確認\n",
+    "key = Vigenere.KeyGen() # 鍵 = ワンタイムパスワード\n",
+    "println(key)\n",
+    "\n",
+    "# 符号化して暗号化\n",
+    "enc = Vigenere.Enc(encode(\"Hello, World!\"), key)\n",
+    "println(enc) # 暗号文\n",
+    "\n",
+    "# 復号して平文化\n",
+    "dec = Vigenere.Dec(enc, key) |> decode\n",
+    "println(dec) # 平文"
    ]
   },
   {
