add: 共通鍵暗号概論

--- a/02_共通鍵暗号.ipynb
+++ b/02_共通鍵暗号.ipynb
@@ -43,7 +43,101 @@
     "    - Enc: 平文と秘密鍵を引数にとり、暗号文を返す\n",
     "- Decryptor（復号を行う人）\n",
     "    - Encryptorと安全な方法でやり取りを行い、秘密鍵を共有する\n",
-    "    - Dec: 暗号文と秘密鍵を引数にとり、平文を返す"
+    "    - Dec: 暗号文と秘密鍵を引数にとり、平文を返す\n",
+    "\n",
+    "### 共通鍵暗号の性質\n",
+    "- 共通鍵は次の条件を満たさなければならない\n",
+    "    - 正当性\n",
+    "    - 秘匿性\n",
+    "\n",
+    "#### 正当性\n",
+    "- 正当性とは、暗号文を復号すると元の平文に戻ること\n",
+    "- 共通鍵暗号の正当性は、任意の *key*, *m* に対して、次式が成り立つことを意味する\n",
+    "    ```\n",
+    "    m = Dec(key, Enc(key, m))\n",
+    "    ```\n",
+    "\n",
+    "#### 秘匿性\n",
+    "- 秘匿性とは、暗号文*c*から平文*m*に関する情報が得られないこと\n",
+    "- 秘匿性は攻撃モデルと解読モデルによって分類される\n",
+    "    - 攻撃者の攻撃モデルが強力であるほど、攻撃者が得られる情報が多くなり、暗号の解読に成功しやすくなる\n",
+    "    - 解読モデルの一つに強秘匿性がある: 暗号文から平文のどんな部分情報も得られないことを意味する"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 攻撃モデル\n",
+    "攻撃モデルは、以下の5つに分けられる\n",
+    "\n",
+    "1. 暗号文単独攻撃\n",
+    "    - 暗号文単独攻撃（Ciphertext Only Attack: COA）とは、同一の秘密鍵によって暗号化された複数の暗号文を利用して攻撃するモデル\n",
+    "    - 単に暗号文攻撃と呼ばれることもある\n",
+    "    - これは、通信路を盗聴するという攻撃に相当する\n",
+    "    - 最も素朴な状況での攻撃であり、いかなる環境においても暗号文単独攻撃を実施可能\n",
+    "2. 既知平文攻撃\n",
+    "    - 既知平文攻撃（Known Plaintext Attack: KPA）とは、同一の秘密鍵によって暗号化された以下の2つを利用して攻撃するモデル\n",
+    "        - 解読対象の暗号文\n",
+    "        - ランダムな平文と暗号文の対\n",
+    "    - これは、暗号文が既知の定型文にもとづいていたり、暗号解読によって過去の平文が特定済みだったりする状況に相当する\n",
+    "3. 選択平文攻撃\n",
+    "    - 選択平文攻撃（Chosen Plaintext Attack: CPA）とは、自分で選んだ平文に対する暗号文を得られる状況において攻撃するモデル\n",
+    "        - つまり、任意のタイミングで暗号化オラクル（Enc）にアクセスできることを意味する\n",
+    "    - これは、暗号化装置を入手していたり、認証サーバを悪用したりする状況に相当する\n",
+    "4. 選択暗号文攻撃\n",
+    "    - 選択暗号文攻撃（Choosen Ciphertext Attack: CCA1）とは、解読対象の暗号文を受け取る前の時点で、自分で選んだ暗号文に対する平文を得られるという状況で攻撃するモデル\n",
+    "        - つまり、解読対象の暗号文を受け取る前に復号オラクル（Dec）にアクセスできることを意味する\n",
+    "5. 適応的選択暗号文攻撃\n",
+    "    - 適応的選択暗号文攻撃（Adaptive Chosen Ciphertext Attack: CCA2）とは、解読対象の暗号文を受け取る前後において、自分で選んだ暗号文に対する平文を得られるという状況で攻撃するモデル\n",
+    "        - つまり、任意のタイミングで復号オラクル（Dec）にアクセスできることを意味する\n",
+    "\n",
+    "#### 攻撃モデルの強弱関係\n",
+    "共通鍵暗号の場合、選択平文攻撃は誰でも実行できるわけではないため、以下のような強弱関係になる\n",
+    "\n",
+    "```\n",
+    "選択平文攻撃 < (選択平文攻撃＋選択暗号文攻撃) < (選択平文攻撃＋適応的選択暗号文攻撃)\n",
+    "```\n",
+    "\n",
+    "したがって、選択平文攻撃と（適応的）選択暗号文攻撃が同時にできるような状況を作らないすることが、秘匿性向上のカギとなる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 解読モデル\n",
+    "- 暗号解読の目標により解読達成度は変わる\n",
+    "    - 暗号文から平文全体を求めるより、平文の部分情報を求めるほうが簡単\n",
+    "    - 秘密鍵を特定するより、ある暗号文の平文全体を求めるほうが簡単\n",
+    "- 共通鍵暗号が安全であるためには、選択平文攻撃と（適応的）選択暗号文攻撃攻撃の下で強秘匿性を満たす必要がある\n",
+    "\n",
+    "### 鍵全数探索攻撃\n",
+    "- 秘密鍵に対する総当たり攻撃を鍵全数探索攻撃と呼ぶ\n",
+    "- 原理的にどのような共通鍵暗号に対しても実行できる攻撃であるため、この攻撃が現実的に成功しないような鍵長にしなければならない\n",
+    "    - つまり、「鍵全数探索攻撃よりも効率的な秘密鍵を求めるアルゴリズムが存在しない」という条件を満たしたとき、安全な共通鍵暗号になる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 共通鍵暗号の分類\n",
+    "共通鍵暗号は、暗号化する平文の単位によって、ストリーム暗号とブロック暗号に大別される\n",
+    "\n",
+    "1. ストリーム暗号\n",
+    "    - 平文を小さい単位（ビット、バイト、ワード）で順次処理する暗号\n",
+    "    - 平文と秘密鍵の排他的論理和をとることで暗号化・復号する\n",
+    "    - 理想的なストリーム暗号をバーナム暗号と呼ぶ\n",
+    "2. ブロック暗号\n",
+    "    - 平文を一定の大きさ（ブロック）単位で処理する暗号\n",
+    "    - ブロックのサイズより大きい平文を暗号化する際は、ブロック暗号に対して暗号化モードが適用される\n",
+    "        - 暗号化モードには以下のようなものがある\n",
+    "            - ECBモード\n",
+    "            - CBCモード\n",
+    "            - CFBモード\n",
+    "            - OFBモード\n",
+    "            - CTRモード"
    ]
   },
   {
