add: 共通鍵暗号の仕組み

--- a/02_共通鍵暗号.ipynb
+++ b/02_共通鍵暗号.ipynb
@@ -20,7 +20,30 @@
     "- **共通鍵暗号**\n",
     "    - 暗号化と復号に同一の秘密鍵を用いる暗号\n",
     "    - 共通鍵暗号における秘密鍵を特に共通鍵と呼ぶ場合もある\n",
-    "    - 一般に高速に暗号化・復号できるように設計されているため、大サイズの平文の暗号化に向いている"
+    "    - 一般に高速に暗号化・復号できるように設計されているため、大サイズの平文の暗号化に向いている\n",
+    "    \n",
+    "### 暗号における鍵\n",
+    "- 暗号化アルゴリズムや復号アルゴリズムの動作を制御するためのデータのことを鍵と呼ぶ\n",
+    "    - 例) シーザー暗号の場合: n=3 という固定の鍵が使用されている\n",
+    "    - 例) シフト暗号の場合: 25種類の鍵が使用されている\n",
+    "        - 正しい鍵を推測できなければ暗号文を正しく復号できない\n",
+    "- 鍵という概念により、同じ暗号化アルゴリズムを採用していても、異なる暗号化手続きを実現できる\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 共通鍵暗号の仕組み\n",
+    "![algorithm](./img/common-key-crypto-algorithm.png)\n",
+    "\n",
+    "- Encryptor（暗号化を行う人）\n",
+    "    - KeyGen: 何らかのセキュリティパラメータから秘密鍵を生成\n",
+    "        - 一般的には疑似乱数をセキュリティパラメータにすることが多い\n",
+    "    - Enc: 平文と秘密鍵を引数にとり、暗号文を返す\n",
+    "- Decryptor（復号を行う人）\n",
+    "    - Encryptorと安全な方法でやり取りを行い、秘密鍵を共有する\n",
+    "    - Dec: 暗号文と秘密鍵を引数にとり、平文を返す"
    ]
   },
   {
