--- a/02_共通鍵暗号.ipynb
+++ b/02_共通鍵暗号.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "### 共通鍵暗号の仕組み\n",
-    "![algorithm](./img/common-key-crypto-algorithm.png)\n",
+    "![common-key-crypto-algorithm.drawio.png](./img/common-key-crypto-algorithm.drawio.png)\n",
     "\n",
     "- Encryptor（暗号化を行う人）\n",
     "    - KeyGen: 何らかのセキュリティパラメータから秘密鍵を生成\n",
@@ -150,17 +150,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
