--- a/01_古典暗号.ipynb
+++ b/01_古典暗号.ipynb
@@ -113,10 +113,10 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Char,1}:\n",
-       " '\\x03'\n",
-       " '\\x04'\n",
-       " '\\x05'"
+       "3-element Vector{Char}:\n",
+       " '\\x03': ASCII/Unicode U+0003 (category Cc: Other, control)\n",
+       " '\\x04': ASCII/Unicode U+0004 (category Cc: Other, control)\n",
+       " '\\x05': ASCII/Unicode U+0005 (category Cc: Other, control)"
       ]
      },
      "execution_count": 2,
@@ -166,17 +166,17 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{Char,1}:\n",
-       " '\\a'  \n",
-       " '\\x04'\n",
-       " '\\v'  \n",
-       " '\\v'  \n",
-       " '\\x0e'\n",
-       " '\\x16'\n",
-       " '\\x0e'\n",
-       " '\\x11'\n",
-       " '\\v'  \n",
-       " '\\x03'"
+       "10-element Vector{Char}:\n",
+       " '\\a': ASCII/Unicode U+0007 (category Cc: Other, control)\n",
+       " '\\x04': ASCII/Unicode U+0004 (category Cc: Other, control)\n",
+       " '\\v': ASCII/Unicode U+000B (category Cc: Other, control)\n",
+       " '\\v': ASCII/Unicode U+000B (category Cc: Other, control)\n",
+       " '\\x0e': ASCII/Unicode U+000E (category Cc: Other, control)\n",
+       " '\\x16': ASCII/Unicode U+0016 (category Cc: Other, control)\n",
+       " '\\x0e': ASCII/Unicode U+000E (category Cc: Other, control)\n",
+       " '\\x11': ASCII/Unicode U+0011 (category Cc: Other, control)\n",
+       " '\\v': ASCII/Unicode U+000B (category Cc: Other, control)\n",
+       " '\\x03': ASCII/Unicode U+0003 (category Cc: Other, control)"
       ]
      },
      "execution_count": 4,
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[80, 109, 116, 116, 119, 52, 40, 95, 119, 122, 116, 108, 41]\n",
+      "[81, 110, 117, 117, 120, 53, 41, 96, 120, 123, 117, 109, 42]\n",
       "Hello, World!\n"
      ]
     }
@@ -547,10 +547,10 @@
     {
      "data": {
       "text/plain": [
-       "3-element Array{Array{Any,1},1}:\n",
-       " ['雨', '降', 'っ', 'て']            \n",
-       " ['地', '固', 'ま', 'る']            \n",
-       " ['ぞ', '\\U53a79', '\\U6f5e7', '𘞎']"
+       "3-element Vector{Vector{Any}}:\n",
+       " ['雨', '降', 'っ', 'て']\n",
+       " ['地', '固', 'ま', 'る']\n",
+       " ['ぞ', '\\Ua6236', '\\U14661', '\\Uc1f4f']"
       ]
      },
      "execution_count": 13,
@@ -595,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "\"雨地ぞ降固\\U53a79っま\\U6f5e7てる𘞎\""
+       "\"雨地ぞ降固\\Ua6236っま\\U14661てる\\Uc1f4f\""
       ]
      },
      "execution_count": 14,
@@ -641,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "2×5 Array{Int64,2}:\n",
+       "2×5 Matrix{Int64}:\n",
        " 1  3  5  7   9\n",
        " 2  4  6  8  10"
       ]
@@ -664,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "5×2 Array{Int64,2}:\n",
+       "5×2 Matrix{Int64}:\n",
        " 1   2\n",
        " 3   4\n",
        " 5   6\n",
@@ -689,7 +689,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{Int64,1}:\n",
+       "10-element Vector{Int64}:\n",
        "  1\n",
        "  3\n",
        "  5\n",
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "10-element Array{Int64,1}:\n",
+       "10-element Vector{Int64}:\n",
        "  1\n",
        "  2\n",
        "  3\n",
@@ -802,11 +802,11 @@
      "output_type": "stream",
      "text": [
       "[72, 101, 108, 108, 111, 44, 32, 119, 111, 114, 108, 100, 33, 10, 73, 39, 109, 32, 97, 112, 112, 108, 101, 12496, 12490, 12490, 32, 97, 116, 32, 49, 57, 56, 56, 46, 10, 66, 111, 121, 115, 32, 97, 110, 100, 32, 71, 105, 114, 108, 115, 32, 98, 101, 32, 97, 109, 98, 105, 115, 105, 111, 117, 115, 33, 10]\n",
-      "[72, 111, 109, 12490, 56, 32, 108, 98, 10, 101, 114, 32, 12490, 56, 97, 115, 105, 242272, 108, 108, 97, 32, 46, 110, 32, 115, 131680, 108, 100, 112, 97, 10, 100, 98, 105, 186643, 111, 33, 112, 116, 66, 32, 101, 111, 529214, 44, 10, 108, 32, 111, 71, 32, 117, 824108, 32, 73, 101, 49, 121, 105, 97, 115, 296287, 119, 39, 12496, 57, 115, 114, 109, 33, 537954]\n",
+      "[72, 32, 33, 97, 12490, 49, 66, 110, 108, 97, 111, 101, 119, 10, 112, 12490, 57, 111, 100, 115, 109, 117, 108, 111, 73, 112, 32, 56, 121, 32, 32, 98, 115, 108, 114, 39, 108, 97, 56, 115, 71, 98, 105, 33, 111, 108, 109, 101, 116, 46, 32, 105, 101, 115, 10, 44, 100, 32, 12496, 32, 10, 97, 114, 32, 105, 844986]\n",
       "Hello, world!\n",
       "I'm appleバナナ at 1988.\n",
       "Boys and Girls be ambisious!\n",
-      "𻉠𠉠𭤓򁌾󉌬񈕟򃕢\n"
+      "󎒺\n"
      ]
     }
    ],
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 1, 9, 5, 4, 4, 3, 3, 9, 3, 7, 6]\n",
-      "[74, 102, 117, 113, 115, 48, 35, 90, 120, 117, 115, 106, 35]\n",
+      "[9, 5, 8, 1, 8, 7, 1, 6, 4, 5, 3]\n",
+      "[81, 106, 116, 109, 119, 51, 33, 93, 115, 119, 111, 109, 38]\n",
       "Hello, World!\n"
      ]
     }
@@ -1133,17 +1133,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.1",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.1"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
